Bugfix to prevent white out on iPhone.

--- a/src/css/signature.less
+++ b/src/css/signature.less
@@ -13,7 +13,7 @@
 .logo {
 	width: 80px;
 	height: 80px;
-	box-shadow: 0px 0px 5px 0px @light;
+	box-shadow: 0px 0px 5px 0px @dark-primary;
 	border-radius: 50%;
 	animation-duration: 3s;
 	animation-name: blured;
@@ -54,5 +54,13 @@
   }
   100% {
 		box-shadow: 1px 1px 5px 0px @dark-primary;
+  }
+}
+
+
+@media (max-width: @screen-sp-min) {
+  .logo {
+		animation-name: none;
+		box-shadow: 0px 0px 10px 0px @dark-primary;
   }
 }
